Спринт 5. Внесены изменения по замечаниям ревьюера