@@ -3,9 +3,11 @@ package manager;
 import tasks.Task;
 
 import java.util.ArrayList;
+import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private ArrayList<Task> historyList = new ArrayList<>();
+    private List<Task> historyList = new ArrayList<>();
+    private final int HISTORY_LENGTH = 10;
 
     @Override
     public void add(Task task) {
@@ -13,13 +15,13 @@ public class InMemoryHistoryManager implements HistoryManager {
             return;
         }
         historyList.add(task);
-            if (historyList.size() > 10) {
-                historyList.remove(0);
+            if (historyList.size() > HISTORY_LENGTH) {
+                historyList.removeFirst();
             }
     }
 
     @Override
-    public ArrayList<Task> getHistory() {
+    public List<Task> getHistory() {
         return historyList;
     }
 }
